# c-clon

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  NOTICE  README.md
ci/scripts/: codespell_results_converter.sh  cppcheck_results_converter.sh
include/: ast.h  clon.h  clon_json_writer.h  error.h  error_handler.h  json_writer.h  library.h  utf8_util.h  writer.h
sample_project/: CMakeLists.txt
sample_projects/pretty_consol_writer/: CMakeLists.txt  README.md  main.c
src/: CMakeLists.txt  ast.c  ast.h  clon.c  clon_json_writer.c  error.c  error.h  error_handler.c  json_writer.c  json_writer.h  lexer.c  lexer.h  library.c  parser.c  parser.h  utf8_util.c  writer.c  writer.h
test/: CMakeLists.txt  blackbox_test.c  error_handler_test.c  json_writer_test.c  lexer_test.c  parser_test.c
test/helper/: error_helper.c  error_helper.h  node_helper.c  node_helper.h  token_helper.c
test/mock/: mock_lexer.c  mock_lexer.h
tests/: CMakeLists.txt  parser_test.c  test_hello.c
tests/helper/: error_helper.c  error_helper.h  node_helper.c  node_helper.h  token_helper.h
tests/mock/: mock_lexer.h
